# test-email-agent

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
src/my_email_agent/: crew.py  main.py
src/my_email_agent/config/: agents.yaml  config.py  tasks.yaml
