[project]
name = "my_email_agent"
version = "0.1.0"
description = "my-email-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "composio>=0.8.8",
    "composio-crewai>=0.8.8",
    "crewai[tools]>=0.159.0,<1.0.0",
    "groq>=0.31.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
my_email_agent = "my_email_agent.main:run"
run_crew = "my_email_agent.main:run"
train = "my_email_agent.main:train"
replay = "my_email_agent.main:replay"
test = "my_email_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
